@@ -61,14 +61,14 @@ public class Omm extends NdmConstituent<OdmHeader, Segment<OmmMetadata, OmmData>
      * @return file metadata
      */
     public OmmMetadata getMetadata() {
-        return getSegments().get(0).getMetadata();
+        return getSegments().getFirst().getMetadata();
     }
 
     /** Get the file data.
      * @return file data
      */
     public OmmData getData() {
-        return getSegments().get(0).getData();
+        return getSegments().getFirst().getData();
     }
 
     /** {@inheritDoc} */
