@@ -16,6 +16,9 @@
  */
 package org.orekit.frames.encounter;
 
+import java.util.Arrays;
+import java.util.List;
+
 import org.hipparchus.CalculusFieldElement;
 import org.hipparchus.Field;
 import org.hipparchus.geometry.euclidean.threed.FieldRotation;
@@ -35,10 +38,6 @@ import org.orekit.time.AbsoluteDate;
 import org.orekit.time.FieldAbsoluteDate;
 import org.orekit.utils.FieldPVCoordinates;
 import org.orekit.utils.PVCoordinates;
-
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Interface for encounter local orbital frame.
@@ -157,7 +156,7 @@ public interface EncounterLOF extends LOF {
         final List<double[]> projectionMatrixDataList = Arrays.stream(identity.getData())
                                                               .filter(values -> !Arrays.equals(values,
                                                                                                getAxisNormalToCollisionPlane().toArray()))
-                                                              .collect(Collectors.toList());
+                                                              .toList();
 
         // Map list<double[]> to double[][]
         final double[][] projectionMatrixData = new double[2][3];
@@ -198,7 +197,7 @@ public interface EncounterLOF extends LOF {
                                                          .filter(values -> !Arrays.equals(values,
                                                                                           getAxisNormalToCollisionPlane(
                                                                                                   field).toArray()))
-                                                         .collect(Collectors.toList());
+                                                         .toList();
 
         // Map list<C[]> to C[][]
         final T[][] projectionMatrixData = MathArrays.buildArray(field, 2, 3);
