@@ -136,11 +136,11 @@ public class ShortPeriodicsInterpolatedCoefficient {
         final int closestNeighbor;
 
         //case where the date is before the available points
-        if (date.compareTo(abscissae.get(0)) <= 0) {
+        if (date.compareTo(abscissae.getFirst()) <= 0) {
             closestNeighbor = 0;
         }
         //case where the date is after the available points
-        else if (date.compareTo(abscissae.get(abscissae.size() - 1)) >= 0) {
+        else if (date.compareTo(abscissae.getLast()) >= 0) {
             closestNeighbor = abscissae.size() - 1;
         }
         //general case: one is looking for the two consecutives entries that surround the input date
