@@ -155,7 +155,7 @@ public class FieldAbsolutePVCoordinatesHermiteInterpolator<KK extends CalculusFi
         final List<FieldAbsolutePVCoordinates<KK>> sample = interpolationData.getNeighborList();
 
         // Extract input frame from sample
-        final Frame inputFrame = sample.get(0).getFrame();
+        final Frame inputFrame = sample.getFirst().getFrame();
 
         // Set up an interpolator taking derivatives into account
         final FieldHermiteInterpolator<KK> interpolator = new FieldHermiteInterpolator<>();
