@@ -234,7 +234,7 @@ public class FieldAttitudeInterpolatorTest {
 
         // THEN
         Assertions.assertEquals(1, actualSubInterpolators.size());
-        Assertions.assertSame(mockTimeInterpolator, actualSubInterpolators.get(0));
+        Assertions.assertSame(mockTimeInterpolator, actualSubInterpolators.getFirst());
     }
 
 }
