@@ -208,14 +208,14 @@ class DSSTBatchLSEstimatorTest {
             }
         });
 
-        ParameterDriver aDriver = estimator.getOrbitalParametersDrivers(true).getDrivers().get(0);
+        ParameterDriver aDriver = estimator.getOrbitalParametersDrivers(true).getDrivers().getFirst();
         Assertions.assertEquals("a", aDriver.getName());
         aDriver.setValue(aDriver.getValue() + 1.2);
         aDriver.setReferenceDate(AbsoluteDate.GALILEO_EPOCH);
 
         EstimationTestUtils.checkFit(false, context, estimator, 2, 3,
-                                     0.0, 2.0e-6,
-                                     0.0, 3.4e-6,
+                                     0.0, 2.1e-6,
+                                     0.0, 3.6e-6,
                                      0.0, 1.1e-6,
                                      0.0, 4.6e-10);
 
@@ -310,7 +310,7 @@ class DSSTBatchLSEstimatorTest {
             }
         });
 
-        ParameterDriver aDriver = estimator.getOrbitalParametersDrivers(true).getDrivers().get(0);
+        ParameterDriver aDriver = estimator.getOrbitalParametersDrivers(true).getDrivers().getFirst();
         Assertions.assertEquals("a", aDriver.getName());
         aDriver.setValue(aDriver.getValue() + 1.2);
         aDriver.setReferenceDate(AbsoluteDate.GALILEO_EPOCH);
@@ -429,11 +429,11 @@ class DSSTBatchLSEstimatorTest {
         estimator.setMaxIterations(10);
         estimator.setMaxEvaluations(20);
 
-        EstimationTestUtils.checkFit(false, context, estimator, 1, 3,
+        EstimationTestUtils.checkFit(false, context, estimator, 1, 4,
                                      0.0, 1.2e-10,
                                      0.0, 3.0e-10,
                                      0.0, 9.4e-9,
-                                     0.0, 1.4e-11);
+                                     0.0, 1.6e-11);
     }
 
     /**
@@ -450,16 +450,17 @@ class DSSTBatchLSEstimatorTest {
         // create perfect range measurements
         final Propagator propagator = EstimationTestUtils.createPropagator(context.initialOrbit,
                                                                                propagatorBuilder);
-
-        final List<ObservedMeasurement<?>> measurementsRange =
-                        EstimationTestUtils.createMeasurements(propagator,
-                                                               new TwoWayRangeMeasurementCreator(context),
-                                                               1.0, 3.0, 300.0);
         final double groundClockDrift =  4.8e-9;
         for (final GroundStation station : context.stations) {
             station.getClockDriftDriver().setValue(groundClockDrift);
         }
         final double satClkDrift = 3.2e-10;
+
+        final List<ObservedMeasurement<?>> measurementsRange =
+                        EstimationTestUtils.createMeasurements(propagator,
+                                                               new TwoWayRangeMeasurementCreator(context),
+                                                               1.0, 3.0, 300.0);
+
         final List<ObservedMeasurement<?>> measurementsRangeRate =
                         EstimationTestUtils.createMeasurements(propagator,
                                                                new RangeRateMeasurementCreator(context, false, satClkDrift),
@@ -481,11 +482,11 @@ class DSSTBatchLSEstimatorTest {
         estimator.setMaxEvaluations(20);
 
         // we have low correlation between the two types of measurement. We can expect a good estimate.
-        EstimationTestUtils.checkFit(false, context, estimator, 1, 3,
-                                     0.0, 5.4e-7,
-                                     0.0, 2.9e-6,
-                                     0.0, 7.2e-8,
-                                     0.0, 5.2e-11);
+        EstimationTestUtils.checkFit(false, context, estimator, 1, 4,
+                                     0.0, 2.6e-7,
+                                     0.0, 8.2e-7,
+                                     0.0, 6.3e-8,
+                                     0.0, 3.4e-11);
     }
 
     @Test
@@ -497,7 +498,7 @@ class DSSTBatchLSEstimatorTest {
 
         // Select the central attraction coefficient (here there is only the central attraction coefficient)
         // as estimated parameter
-        propagatorBuilder.getPropagationParametersDrivers().getDrivers().get(0).setSelected(true);
+        propagatorBuilder.getPropagationParametersDrivers().getDrivers().getFirst().setSelected(true);
         // create perfect PV measurements
         final DSSTPropagator propagator = (DSSTPropagator) EstimationTestUtils.createPropagator(context.initialOrbit,
                                                                            propagatorBuilder);
@@ -515,11 +516,11 @@ class DSSTBatchLSEstimatorTest {
         ParameterDriversList estimatedParameters = estimator.getPropagationParametersDrivers(true);
         // Verify that the propagator, the builder and the estimator know mu
         final String driverName = DSSTNewtonianAttraction.CENTRAL_ATTRACTION_COEFFICIENT;
-        Assertions.assertInstanceOf(DSSTNewtonianAttraction.class, propagator.getAllForceModels().get(0));
-        Assertions.assertInstanceOf(DSSTNewtonianAttraction.class, propagatorBuilder.getAllForceModels().get(0));
+        Assertions.assertInstanceOf(DSSTNewtonianAttraction.class, propagator.getAllForceModels().getFirst());
+        Assertions.assertInstanceOf(DSSTNewtonianAttraction.class, propagatorBuilder.getAllForceModels().getFirst());
         Assertions.assertNotNull(estimatedParameters.findByName(driverName));
-        Assertions.assertTrue(propagator.getAllForceModels().get(0).getParametersDrivers().get(0).isSelected());
-        Assertions.assertTrue(propagatorBuilder.getAllForceModels().get(0).getParametersDrivers().get(0).isSelected());
+        Assertions.assertTrue(propagator.getAllForceModels().getFirst().getParametersDrivers().getFirst().isSelected());
+        Assertions.assertTrue(propagatorBuilder.getAllForceModels().getFirst().getParametersDrivers().getFirst().isSelected());
     }
 
 }
