@@ -16,7 +16,6 @@
  */
 package org.orekit.estimation.measurements;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -123,6 +122,33 @@ class GroundStationTest {
     }
 
     @Test
+    void getPVCoordinatesProviderGetVelocity() {
+        // GIVEN
+        EstimationTestUtils.eccentricContext("regular-data:potential:tides");
+        final Frame ecef = FramesFactory.getGTOD(true);
+        final GeodeticPoint geodeticPoint = new GeodeticPoint(1., 2., 3.);
+        final TopocentricFrame topocentricFrame = new TopocentricFrame(new OneAxisEllipsoid(Constants.WGS84_EARTH_EQUATORIAL_RADIUS,
+                Constants.WGS84_EARTH_FLATTENING, ecef), geodeticPoint, "");
+        final GroundStation station = new GroundStation(topocentricFrame);
+        final AbsoluteDate date = AbsoluteDate.ARBITRARY_EPOCH;
+        for (final ParameterDriver driver: selectAllDrivers(station)) {
+            driver.setReferenceDate(date);
+        }
+        station.getClockBiasDriver().setValue(0.1);
+        station.getPolarOffsetYDriver().setValue(2);
+        station.getEastOffsetDriver().setValue(1);
+        station.getNorthOffsetDriver().setValue(-1);
+        station.getZenithOffsetDriver().setValue(2);
+        final PVCoordinatesProvider pvCoordinatesProvider = station.getPVCoordinatesProvider();
+        final Frame eci = FramesFactory.getEME2000();
+        // WHEN
+        final Vector3D actualVelocity = pvCoordinatesProvider.getVelocity(date, eci);
+        // THEN
+        final PVCoordinates pvCoordinates = pvCoordinatesProvider.getPVCoordinates(date, eci);
+        Assertions.assertEquals(pvCoordinates.getVelocity(), actualVelocity);
+    }
+
+    @Test
     void getFieldPVCoordinatesProvider() {
         // GIVEN
         EstimationTestUtils.eccentricContext("regular-data:potential:tides");
@@ -171,14 +197,14 @@ class GroundStationTest {
                                                                1.0, 3.0, 300.0);
 
         // change one station clock
-        final TopocentricFrame base  = context.stations.get(0).getBaseFrame();
+        final TopocentricFrame base  = context.stations.getFirst().getBaseFrame();
         final BodyShape parent       = base.getParentShape();
         final double deltaClock      = 0.00084532;
         final String changedSuffix   = "-changed";
         final QuadraticClockModel blankClock = new QuadraticClockModel(context.initialOrbit.getDate(), 0.0, 0.0, 0.0);
         final GroundStation changed  = new GroundStation(new TopocentricFrame(parent, base.getPoint(),
                                                                               base.getName() + changedSuffix), context.ut1.getEOPHistory(),
-                                                         blankClock, context.stations.get(0).getDisplacements());
+                                                         blankClock, context.stations.getFirst().getDisplacements());
 
         // create orbit estimator
         final BatchLSEstimator estimator = new BatchLSEstimator(new LevenbergMarquardtOptimizer(),
@@ -192,7 +218,7 @@ class GroundStationTest {
                                                        range.getObservedValue()[0],
                                                        range.getTheoreticalStandardDeviation()[0],
                                                        range.getBaseWeight()[0],
-                                                       range.getSatellites().get(0)));
+                                                       range.getSatellites().getFirst()));
                 } else {
                     estimator.addMeasurement(range);
                 }
@@ -208,20 +234,43 @@ class GroundStationTest {
         changed.getZenithOffsetDriver().setSelected(false);
 
         EstimationTestUtils.checkFit(false, context, estimator, 2, 3,
-                                     0.0, 6.8e-7,
-                                     0.0, 2.0e-6,
+                                     0.0, 9.5e-7,
+                                     0.0, 2.4e-6,
                                      0.0, 1.8e-7,
                                      0.0, 8e-11);
         Assertions.assertEquals(deltaClock, changed.getClockBiasDriver().getValue(), 9.6e-11);
 
         RealMatrix normalizedCovariances = estimator.getOptimum().getCovariances(1.0e-10);
         RealMatrix physicalCovariances   = estimator.getPhysicalCovariances(1.0e-10);
-        Assertions.assertEquals(changed.isSpaceBased(), false);
+        Assertions.assertFalse(changed.isSpaceBased());
         Assertions.assertEquals(7,        normalizedCovariances.getRowDimension());
         Assertions.assertEquals(7,        normalizedCovariances.getColumnDimension());
         Assertions.assertEquals(7,        physicalCovariances.getRowDimension());
         Assertions.assertEquals(7,        physicalCovariances.getColumnDimension());
         Assertions.assertEquals(4.185e-9, physicalCovariances.getEntry(6, 6), 3.0e-13);
+
+    }
+
+    @Test
+    void testClockOffsetValues() {
+
+        Context context = EstimationTestUtils.eccentricContext("regular-data:potential:tides");
+
+        // change one station clock
+        final TopocentricFrame base  = context.stations.getFirst().getBaseFrame();
+        final BodyShape parent       = base.getParentShape();
+        final String changedSuffix   = "-changed";
+        final QuadraticClockModel quadraticClock = new QuadraticClockModel(context.initialOrbit.getDate(), 3.0e-9, 2.0e-9, 1.0e-9);
+        final GroundStation changed  = new GroundStation(new TopocentricFrame(parent, base.getPoint(),
+                                                                              base.getName() + changedSuffix), context.ut1.getEOPHistory(),
+                                                         quadraticClock, context.stations.getFirst().getDisplacements());
+
+        final AbsoluteDate shiftedDate = context.initialOrbit.getDate().shiftedBy(60.0); // one minute
+        final double bias  = changed.getOffsetValue(shiftedDate);
+        final double drift = changed.getOffsetRate(shiftedDate);
+
+        Assertions.assertEquals(3.723e-6, bias, 1e-10);
+        Assertions.assertEquals(1.22e-7, drift, 1e-10);
 
     }
 
@@ -244,7 +293,7 @@ class GroundStationTest {
 
         // move one station
         final RandomGenerator random = new Well19937a(0x4adbecfc743bda60L);
-        final TopocentricFrame base = context.stations.get(0).getBaseFrame();
+        final TopocentricFrame base = context.stations.getFirst().getBaseFrame();
         final BodyShape parent = base.getParentShape();
         final Vector3D baseOrigin = parent.transform(base.getPoint());
         final Vector3D deltaTopo = new Vector3D(2 * random.nextDouble() - 1,
@@ -258,7 +307,7 @@ class GroundStationTest {
                                                                                             parent.getBodyFrame(),
                                                                                             null),
                                                                            base.getName() + movedSuffix), context.ut1.getEOPHistory(),
-                                                      context.stations.get(0).getDisplacements());
+                                                      context.stations.getFirst().getDisplacements());
 
         // create orbit estimator
         final BatchLSEstimator estimator = new BatchLSEstimator(new LevenbergMarquardtOptimizer(),
@@ -271,7 +320,7 @@ class GroundStationTest {
                                                        range.getObservedValue()[0],
                                                        range.getTheoreticalStandardDeviation()[0],
                                                        range.getBaseWeight()[0],
-                                                       range.getSatellites().get(0)));
+                                                       range.getSatellites().getFirst()));
                 } else {
                     estimator.addMeasurement(range);
                 }
@@ -289,17 +338,17 @@ class GroundStationTest {
         EstimationTestUtils.checkFit(false, context, estimator, 2, 3,
                                      0.0, 6.7e-7,
                                      0.0, 1.8e-6,
-                                     0.0, 9.1e-7,
-                                     0.0, 5e-10);
-        Assertions.assertEquals(deltaTopo.getX(), moved.getEastOffsetDriver().getValue(),   4.5e-7);
+                                     0.0, 1.3e-6,
+                                     0.0, 6.1e-10);
+        Assertions.assertEquals(deltaTopo.getX(), moved.getEastOffsetDriver().getValue(),   9.4e-7);
         Assertions.assertEquals(deltaTopo.getY(), moved.getNorthOffsetDriver().getValue(),  6.2e-7);
         Assertions.assertEquals(deltaTopo.getZ(), moved.getZenithOffsetDriver().getValue(), 2.6e-7);
 
         GeodeticPoint result = moved.getOffsetGeodeticPoint((AbsoluteDate) null);
 
-        GeodeticPoint reference = context.stations.get(0).getBaseFrame().getPoint();
-        Assertions.assertEquals(reference.getLatitude(),  result.getLatitude(),  3.3e-14);
-        Assertions.assertEquals(reference.getLongitude(), result.getLongitude(), 1e-13);
+        GeodeticPoint reference = context.stations.getFirst().getBaseFrame().getPoint();
+        Assertions.assertEquals(reference.getLatitude(),  result.getLatitude(),  1e-12);
+        Assertions.assertEquals(reference.getLongitude(), result.getLongitude(), 1e-12);
         Assertions.assertEquals(reference.getAltitude(),  result.getAltitude(),  2.7e-7);
 
         RealMatrix normalizedCovariances = estimator.getOptimum().getCovariances(1.0e-10);
@@ -385,7 +434,7 @@ class GroundStationTest {
                                                 linearRange.getObservedValue()[0],
                                                 linearRange.getTheoreticalStandardDeviation()[0],
                                                 linearRange.getBaseWeight()[0],
-                                                linearRange.getSatellites().get(0));
+                                                linearRange.getSatellites().getFirst());
                     estimator.addMeasurement(zeroRange);
                 }
             }
@@ -395,7 +444,7 @@ class GroundStationTest {
         estimator.setMaxEvaluations(200);
 
         // we want to estimate pole and prime meridian
-        GroundStation station = zeroEOPContext.stations.get(0);
+        GroundStation station = zeroEOPContext.stations.getFirst();
         station.getPrimeMeridianOffsetDriver().setReferenceDate(refDate);
         station.getPrimeMeridianOffsetDriver().setSelected(true);
         station.getPrimeMeridianDriftDriver().setSelected(true);
@@ -420,10 +469,10 @@ class GroundStationTest {
         final double computedYp    = station.getPolarOffsetYDriver().getValue() / Constants.ARC_SECONDS_TO_RADIANS;
         final double computedYpDot = station.getPolarDriftYDriver().getValue()  / Constants.ARC_SECONDS_TO_RADIANS * Constants.JULIAN_DAY;
         Assertions.assertEquals(0.0, FastMath.abs(dut10 - computedDut1),  1.5e-9);
-        Assertions.assertEquals(0.0, FastMath.abs(lod - computedLOD),     9.3e-10);
+        Assertions.assertEquals(0.0, FastMath.abs(lod - computedLOD),     9.6e-10);
         Assertions.assertEquals(0.0, FastMath.abs(xp0 - computedXp),      1.3e-8);
-        Assertions.assertEquals(0.0, FastMath.abs(xpDot - computedXpDot), 7.9e-9);
-        Assertions.assertEquals(0.0, FastMath.abs(yp0 - computedYp),      5.5e-9);
+        Assertions.assertEquals(0.0, FastMath.abs(xpDot - computedXpDot), 8.1e-9);
+        Assertions.assertEquals(0.0, FastMath.abs(yp0 - computedYp),      5.6e-9);
         Assertions.assertEquals(0.0, FastMath.abs(ypDot - computedYpDot), 5.5e-9);
 
         // thresholds to use if orbit is estimated
@@ -1342,16 +1391,7 @@ class GroundStationTest {
         try {
             int freeParameters = 9;
             Map<String, Integer> indices = new HashMap<>();
-            for (final ParameterDriver driver : Arrays.asList(station.getPrimeMeridianOffsetDriver(),
-                                                              station.getPrimeMeridianDriftDriver(),
-                                                              station.getPolarOffsetXDriver(),
-                                                              station.getPolarDriftXDriver(),
-                                                              station.getPolarOffsetYDriver(),
-                                                              station.getPolarDriftYDriver(),
-                                                              station.getClockBiasDriver(),
-                                                              station.getEastOffsetDriver(),
-                                                              station.getNorthOffsetDriver(),
-                                                              station.getZenithOffsetDriver())) {
+            for (final ParameterDriver driver : station.getParametersDrivers()) {
                 indices.put(driver.getNameSpan(date), indices.size());
             }
             station.getOffsetToInertial(eme2000, date, freeParameters, indices);
