@@ -16,6 +16,8 @@
  */
 package org.orekit.estimation.measurements.generation;
 
+import java.util.SortedSet;
+
 import org.hipparchus.random.RandomGenerator;
 import org.hipparchus.random.Well19937a;
 import org.hipparchus.util.FastMath;
@@ -38,8 +40,6 @@ import org.orekit.time.AbsoluteDate;
 import org.orekit.time.FixedStepSelector;
 import org.orekit.time.TimeScalesFactory;
 
-import java.util.SortedSet;
-
 public abstract class AbstractGroundMeasurementBuilderTest<T extends ObservedMeasurement<T>> {
 
     protected abstract MeasurementBuilder<T> getBuilder(RandomGenerator random,
@@ -57,10 +57,10 @@ public abstract class AbstractGroundMeasurementBuilderTest<T extends ObservedMea
        generator.addPropagator(buildPropagator()); // dummy propagator 2
        final ObservableSatellite satellite = generator.addPropagator(buildPropagator()); // relevant propagator 3
        generator.addPropagator(buildPropagator()); // dummy propagator 4
-       generator.addScheduler(new EventBasedScheduler<>(getBuilder(new Well19937a(seed), context.stations.get(0), satellite),
+       generator.addScheduler(new EventBasedScheduler<>(getBuilder(new Well19937a(seed), context.stations.getFirst(), satellite),
                                                         new FixedStepSelector(step, TimeScalesFactory.getUTC()),
                                                         generator.getPropagator(satellite),
-                                                        EstimationTestUtils.getElevationDetector(context.stations.get(0).getBaseFrame(),
+                                                        EstimationTestUtils.getElevationDetector(context.stations.getFirst().getBaseFrame(),
                                                                                                  FastMath.toRadians(5.0)).
                                                         withHandler(new ContinueOnEvent()),
                                                         SignSemantic.FEASIBLE_MEASUREMENT_WHEN_POSITIVE));
@@ -105,7 +105,7 @@ public abstract class AbstractGroundMeasurementBuilderTest<T extends ObservedMea
     }
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         context = EstimationTestUtils.eccentricContext("regular-data:potential:tides");
 
         propagatorBuilder = context.createNumerical(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
