@@ -16,6 +16,19 @@
  */
 package org.orekit.files.ccsds.ndm.odm.oem;
 
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.ByteArrayInputStream;
+import java.io.CharArrayWriter;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+
 import org.hipparchus.geometry.euclidean.threed.Vector3D;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
@@ -44,19 +57,6 @@ import org.orekit.utils.Constants;
 import org.orekit.utils.IERSConventions;
 import org.orekit.utils.TimeStampedPVCoordinates;
 
-import java.io.BufferedReader;
-import java.io.BufferedWriter;
-import java.io.ByteArrayInputStream;
-import java.io.CharArrayWriter;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
 public class EphemerisOemWriterTest {
 
     // As the default format for position is 3 digits after decimal point in km the max precision in m is 1
@@ -65,7 +65,7 @@ public class EphemerisOemWriterTest {
     private static final double VELOCITY_PRECISION = 1e-2; //in m/s
 
     @BeforeEach
-    public void setUp() throws Exception {
+    public void setUp() {
         Utils.setDataRoot("regular-data");
     }
 
@@ -140,7 +140,7 @@ public class EphemerisOemWriterTest {
         final Oem oem = parser.parseMessage(source);
         EphemerisOemWriter writer = new EphemerisOemWriter(new WriterBuilder().buildOemWriter(),
                                                      oem.getHeader(),
-                                                     oem.getSegments().get(0).getMetadata(),
+                                                     oem.getSegments().getFirst().getMetadata(),
                                                      FileFormat.KVN, "dummy",
                                                      Constants.JULIAN_DAY, 0);
         try {
@@ -178,8 +178,8 @@ public class EphemerisOemWriterTest {
                                          withMu(CelestialBodyFactory.getEarth().getGM()).
                                          buildOemParser().
                                          parseMessage(new DataSource("", () -> new ByteArrayInputStream(bytes)));
-        Assertions.assertEquals(oem.getSegments().get(0).getMetadata().getObjectID(),
-                generatedOem.getSegments().get(0).getMetadata().getObjectID());
+        Assertions.assertEquals(oem.getSegments().getFirst().getMetadata().getObjectID(),
+                generatedOem.getSegments().getFirst().getMetadata().getObjectID());
     }
 
     @Test
@@ -191,7 +191,7 @@ public class EphemerisOemWriterTest {
 
         EphemerisOemWriter writer = new EphemerisOemWriter(new WriterBuilder().buildOemWriter(),
                                                      oem.getHeader(),
-                                                     oem.getSegments().get(0).getMetadata(),
+                                                     oem.getSegments().getFirst().getMetadata(),
                                                      FileFormat.KVN, "TestOEMIssue723.aem",
                                                      Constants.JULIAN_DAY, 0);
         final CharArrayWriter caw = new CharArrayWriter();
@@ -202,7 +202,7 @@ public class EphemerisOemWriterTest {
                                          withMu(CelestialBodyFactory.getEarth().getGM()).
                                          buildOemParser().
                                          parseMessage(new DataSource("", () -> new ByteArrayInputStream(bytes)));
-        Assertions.assertEquals(oem.getHeader().getComments().get(0), generatedOem.getHeader().getComments().get(0));
+        Assertions.assertEquals(oem.getHeader().getComments().getFirst(), generatedOem.getHeader().getComments().getFirst());
     }
 
     /**
@@ -368,7 +368,7 @@ public class EphemerisOemWriterTest {
     }
 
     private OemMetadata dummyMetadata() {
-        OemMetadata metadata = new OemMetadata(4);
+        OemMetadata metadata = new OemMetadata(4, null);
         metadata.addComment("dummy comment");
         metadata.setTimeSystem(TimeSystem.TT);
         metadata.setObjectID("9999-999ZZZ");
