@@ -17,6 +17,7 @@
 package org.orekit.files.ccsds.ndm.odm.opm;
 
 import org.hamcrest.MatcherAssert;
+import org.hamcrest.Matchers;
 import org.hipparchus.geometry.euclidean.threed.Vector3D;
 import org.hipparchus.linear.Array2DRowRealMatrix;
 import org.hipparchus.util.FastMath;
@@ -24,6 +25,7 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.orekit.OrekitMatchers;
+import org.orekit.TestUtils;
 import org.orekit.Utils;
 import org.orekit.bodies.CelestialBody;
 import org.orekit.bodies.CelestialBodyFactory;
@@ -31,21 +33,24 @@ import org.orekit.data.DataSource;
 import org.orekit.errors.OrekitException;
 import org.orekit.errors.OrekitIllegalArgumentException;
 import org.orekit.errors.OrekitMessages;
+import org.orekit.files.ccsds.definitions.BodyFacade;
+import org.orekit.files.ccsds.definitions.CcsdsFrameMapper;
 import org.orekit.files.ccsds.definitions.CelestialBodyFrame;
+import org.orekit.files.ccsds.definitions.FrameFacade;
 import org.orekit.files.ccsds.ndm.ParsedUnitsBehavior;
 import org.orekit.files.ccsds.ndm.ParserBuilder;
 import org.orekit.files.ccsds.ndm.WriterBuilder;
-import org.orekit.files.ccsds.ndm.odm.CartesianCovariance;
-import org.orekit.files.ccsds.ndm.odm.KeplerianElements;
-import org.orekit.files.ccsds.ndm.odm.SpacecraftParameters;
+import org.orekit.files.ccsds.ndm.odm.*;
 import org.orekit.files.ccsds.utils.generation.Generator;
 import org.orekit.files.ccsds.utils.generation.KvnGenerator;
 import org.orekit.frames.Frame;
 import org.orekit.frames.FramesFactory;
 import org.orekit.frames.LOFType;
+import org.orekit.frames.Transform;
 import org.orekit.orbits.PositionAngleType;
 import org.orekit.time.AbsoluteDate;
 import org.orekit.time.TimeOffset;
+import org.orekit.time.TimeScale;
 import org.orekit.time.TimeScalesFactory;
 import org.orekit.utils.Constants;
 import org.orekit.utils.IERSConventions;
@@ -219,7 +224,7 @@ public class OpmParserTest {
         Assertions.assertEquals(new AbsoluteDate(2000, 6, 3, 9, 0,
                                                  new TimeOffset(34, TimeOffset.SECOND, 100, TimeOffset.MILLISECOND),
                                                  TimeScalesFactory.getUTC()),
-                            file.getManeuvers().get(0).getEpochIgnition());
+                            file.getManeuvers().getFirst().getEpochIgnition());
         Assertions.assertEquals(132.6, file.getManeuver(0).getDuration(), 1e-10);
         Assertions.assertEquals(-18.418, file.getManeuver(0).getDeltaMass(), 1e-10);
         Assertions.assertNull(file.getManeuver(0).getReferenceFrame().asOrbitRelativeFrame());
@@ -333,7 +338,7 @@ public class OpmParserTest {
         Assertions.assertEquals(new AbsoluteDate(2000, 6, 3, 9, 0,
                                                  new TimeOffset(34, TimeOffset.SECOND, 100, TimeOffset.MILLISECOND),
                                                  TimeScalesFactory.getGPS()),
-                            file.getManeuvers().get(0).getEpochIgnition());
+                            file.getManeuvers().getFirst().getEpochIgnition());
         Assertions.assertEquals(132.6, file.getManeuver(0).getDuration(), 1e-10);
         Assertions.assertEquals(-18.418, file.getManeuver(0).getDeltaMass(), 1e-10);
         Assertions.assertNull(file.getManeuver(0).getReferenceFrame().asOrbitRelativeFrame());
@@ -390,7 +395,7 @@ public class OpmParserTest {
                                                  TimeScalesFactory.getUTC()),
                             file.getMetadata().getFrameEpoch());
         Assertions.assertEquals(1, file.getMetadata().getComments().size());
-        Assertions.assertEquals("GEOCENTRIC, CARTESIAN, EARTH FIXED", file.getMetadata().getComments().get(0));
+        Assertions.assertEquals("GEOCENTRIC, CARTESIAN, EARTH FIXED", file.getMetadata().getComments().getFirst());
         Assertions.assertEquals(15951238.3495, file.generateKeplerianOrbit().getA(), 0.001);
         Assertions.assertEquals(0.5914452565, file.generateKeplerianOrbit().getE(), 1.0e-10);
         // Check Data Covariance matrix Block
@@ -487,7 +492,7 @@ public class OpmParserTest {
                                              TimeScalesFactory.getUTC()),
                             file.getMetadata().getFrameEpoch());
         Assertions.assertEquals(1, file.getMetadata().getComments().size());
-        Assertions.assertEquals("GEOCENTRIC, CARTESIAN, EARTH FIXED", file.getMetadata().getComments().get(0));
+        Assertions.assertEquals("GEOCENTRIC, CARTESIAN, EARTH FIXED", file.getMetadata().getComments().getFirst());
         Assertions.assertEquals(15951238.3495, file.generateKeplerianOrbit().getA(), 0.001);
         Assertions.assertEquals(0.5914452565, file.generateKeplerianOrbit().getE(), 1.0e-10);
         // Check Data Covariance matrix Block
@@ -651,7 +656,7 @@ public class OpmParserTest {
                                                  TimeScalesFactory.getGMST(IERSConventions.IERS_2010, false)),
                             file.getMetadata().getFrameEpoch());
         Assertions.assertEquals(1, file.getMetadata().getComments().size());
-        Assertions.assertEquals("GEOCENTRIC, CARTESIAN, EARTH FIXED", file.getMetadata().getComments().get(0));
+        Assertions.assertEquals("GEOCENTRIC, CARTESIAN, EARTH FIXED", file.getMetadata().getComments().getFirst());
         Assertions.assertEquals("OREKIT-4D00FC96-AC64-11E9-BF71-001FD054093C", file.getHeader().getMessageId());
 
         Assertions.assertEquals(15951238.3495, file.generateKeplerianOrbit().getA(), 0.001);
@@ -868,6 +873,85 @@ public class OpmParserTest {
             Assertions.assertEquals(OrekitMessages.CCSDS_INVALID_FRAME, oe.getSpecifier());
             Assertions.assertEquals("ZZRF", oe.getParts()[0]);
         }
+    }
+
+    /** Unit tests for parsing an OPM with a custom frame mapper. */
+    @Test
+    public void testFrameMapper() {
+        // setup
+        Frame parent = FramesFactory.getEME2000();
+        Frame zzrf = new Frame(parent, Transform.IDENTITY, "ZZRF");
+        TimeScale tai = TimeScalesFactory.getTAI();
+        AbsoluteDate expectedEpoch = new AbsoluteDate("2019-09-09T00:00:00.0", tai);
+        CcsdsFrameMapper mapper = new CcsdsFrameMapper() {
+            @Override
+            public Frame buildCcsdsFrame(FrameFacade orientation, AbsoluteDate epoch) {
+                if ("ZZRF".equals(orientation.getName()) && null == epoch) {
+                    return zzrf;
+                }
+                throw new IllegalArgumentException(orientation + " " + epoch);
+            }
+
+            @Override
+            public Frame buildCcsdsFrame(BodyFacade center,
+                                         FrameFacade orientation,
+                                         AbsoluteDate epoch) {
+                if ("EARTH".equals(center.getName()) &&
+                        "ZZRF".equals(orientation.getName()) &&
+                        expectedEpoch.equals(epoch)) {
+                    return zzrf;
+                }
+                throw new IllegalArgumentException(
+                        center + " " + orientation + " " + epoch);
+            }
+
+        };
+        OpmParser parser = new ParserBuilder().
+                withFrameMapper(mapper).
+                withMu(Constants.EIGEN5C_EARTH_MU).
+                withDefaultMass(1000.0).
+                buildOpmParser();
+        final String name = "/ccsds/odm/opm/OPM-unknown-frame-mapper.txt";
+        final DataSource source = new DataSource(name, () -> getClass().getResourceAsStream(name));
+
+        // action
+        final Opm opm = parser.parseMessage(source);
+
+        // verify
+        // check metadata reference frame
+        final OdmCommonMetadata metadata = opm.getMetadata();
+        MatcherAssert.assertThat(metadata.getFrameMapper(), Matchers.sameInstance(mapper));
+        MatcherAssert.assertThat(metadata.getFrame(), Matchers.sameInstance(zzrf));
+
+        // Check only block with reference frame explicitly specified (covariance)
+        final OpmData data = opm.getData();
+        MatcherAssert.assertThat(
+                data.getCovarianceBlock().getFrame(),
+                Matchers.sameInstance(zzrf));
+    }
+
+    /** Unit test for parsing an OPM with a custom frame mapper to map Earth-centered ICRF to GCRF. */
+    @Test
+    public void testFrameMapperGCRF() {
+        // setup
+        Frame gcrf = FramesFactory.getGCRF();
+
+        OpmParser originalParser = new ParserBuilder().
+                withMu(Constants.EIGEN5C_EARTH_MU).
+                withDefaultMass(1000.0).
+                buildOpmParser();
+
+        final String name = "/ccsds/odm/opm/OPM-frame-mapper-gcrf.txt";
+        final DataSource source = new DataSource(name, () -> getClass().getResourceAsStream(name));
+
+        // action
+        final Opm opm = originalParser.parseMessage(source);
+
+        // verify
+        // check metadata reference frame correctly assigned
+        final OdmCommonMetadata metadata = opm.getMetadata();
+        final Frame opmFrame = metadata.getFrame();
+        MatcherAssert.assertThat(opmFrame, Matchers.sameInstance(gcrf));
     }
 
     @Test
