@@ -353,7 +353,7 @@ public class EstimatedModelTest extends AbstractPathDelayTest<EstimatedModel> {
                 driver.setSelected(false);
             }
         }
-        ParameterDriver selected = bound.getDrivers().get(0);
+        ParameterDriver selected = bound.getDrivers().getFirst();
         double p0 = selected.getReferenceValue();
         double h  = selected.getScale();
 
