@@ -101,7 +101,7 @@ class FieldEventsLoggerTest {
         Assertions.assertEquals(Action.CONTINUE, action);
         final List<FieldEventsLogger.FieldLoggedEvent<Binary64>> loggedEvents = eventsLogger.getLoggedEvents();
         Assertions.assertEquals(loggedEvents.size(), counterHandler.getCount());
-        final FieldEventsLogger.FieldLoggedEvent<Binary64> event = loggedEvents.get(0);
+        final FieldEventsLogger.FieldLoggedEvent<Binary64> event = loggedEvents.getFirst();
         Assertions.assertEquals(mockedState, event.getState());
         Assertions.assertNull(event.getResetState());
         Assertions.assertEquals(action, event.getAction());
@@ -146,7 +146,7 @@ class FieldEventsLoggerTest {
         final Action action = detector.getHandler().eventOccurred(mockedState, dateDetector, true);
         // THEN
         Assertions.assertEquals(Action.RESET_STATE, action);
-        Assertions.assertNull(eventsLogger.getLoggedEvents().get(0).getResetState());
+        Assertions.assertNull(eventsLogger.getLoggedEvents().getFirst().getResetState());
     }
 
     private static class FailingResetHandler implements FieldEventHandler<Binary64> {
