@@ -33,7 +33,7 @@ public class BurstSelectorStepTest {
         final AbsoluteDate t1 = t0.shiftedBy(71);
         final List<AbsoluteDate> list = selector.selectDates(t0, t1);
         Assertions.assertEquals(5, list.size());
-        Assertions.assertEquals( 27.0, list.get(0).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
+        Assertions.assertEquals( 27.0, list.getFirst().getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 37.0, list.get(1).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 47.0, list.get(2).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 87.0, list.get(3).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
@@ -48,7 +48,7 @@ public class BurstSelectorStepTest {
         final AbsoluteDate t1 = t0.shiftedBy(62);
         final List<AbsoluteDate> list = selector.selectDates(t0, t1);
         Assertions.assertEquals(4, list.size());
-        Assertions.assertEquals( 30.0, list.get(0).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
+        Assertions.assertEquals( 30.0, list.getFirst().getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 40.0, list.get(1).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 60.0, list.get(2).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 70.0, list.get(3).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
@@ -62,7 +62,7 @@ public class BurstSelectorStepTest {
         final AbsoluteDate t1 = t0.shiftedBy(62);
         final List<AbsoluteDate> list = selector.selectDates(t1, t0);
         Assertions.assertEquals(4, list.size());
-        Assertions.assertEquals( 70.0, list.get(0).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
+        Assertions.assertEquals( 70.0, list.getFirst().getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 60.0, list.get(1).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 40.0, list.get(2).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 30.0, list.get(3).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
@@ -79,7 +79,7 @@ public class BurstSelectorStepTest {
         Assertions.assertEquals(0, list1.size());
         final List<AbsoluteDate> list2 = selector.selectDates(t1, t2);
         Assertions.assertEquals(4, list2.size());
-        Assertions.assertEquals( 60.0, list2.get(0).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
+        Assertions.assertEquals( 60.0, list2.getFirst().getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 70.0, list2.get(1).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 80.0, list2.get(2).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals(120.0, list2.get(3).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
@@ -94,7 +94,7 @@ public class BurstSelectorStepTest {
         final AbsoluteDate t2 = t1.shiftedBy(98);
         final List<AbsoluteDate> list1 = selector.selectDates(t2, t1);
         Assertions.assertEquals(4, list1.size());
-        Assertions.assertEquals(120.0, list1.get(0).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
+        Assertions.assertEquals(120.0, list1.getFirst().getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 80.0, list1.get(1).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 70.0, list1.get(2).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 60.0, list1.get(3).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
@@ -113,7 +113,7 @@ public class BurstSelectorStepTest {
         Assertions.assertEquals(5, list1.size());
         final List<AbsoluteDate> list2 = selector.selectDates(t1, t2);
         Assertions.assertEquals(1, list2.size());
-        Assertions.assertEquals(10.0, list2.get(0).durationFrom(list1.get(list1.size() - 1)), 1.0e-15);
+        Assertions.assertEquals(10.0, list2.getFirst().durationFrom(list1.getLast()), 1.0e-15);
     }
 
     @Test
@@ -128,7 +128,7 @@ public class BurstSelectorStepTest {
         Assertions.assertEquals(5, list1.size());
         final List<AbsoluteDate> list2 = selector.selectDates(t2, t3);
         Assertions.assertEquals(1, list2.size());
-        Assertions.assertEquals(50.0, list2.get(0).durationFrom(list1.get(list1.size() - 1)), 1.0e-15);
+        Assertions.assertEquals(50.0, list2.getFirst().durationFrom(list1.getLast()), 1.0e-15);
     }
 
     @Test
@@ -143,7 +143,7 @@ public class BurstSelectorStepTest {
         Assertions.assertEquals(5, list1.size());
         final List<AbsoluteDate> list2 = selector.selectDates(t2, t3);
         Assertions.assertEquals(2, list2.size());
-        Assertions.assertEquals( 0.0, list2.get(0).durationFrom(t2), 1.0e-15);
+        Assertions.assertEquals( 0.0, list2.getFirst().durationFrom(t2), 1.0e-15);
         Assertions.assertEquals(10.0, list2.get(1).durationFrom(t2), 1.0e-15);
     }
 
@@ -168,7 +168,7 @@ public class BurstSelectorStepTest {
         final AbsoluteDate t1 = t0.shiftedBy(118);
         final List<AbsoluteDate> list1 = selector.selectDates(t0, t1);
         Assertions.assertEquals(6, list1.size());
-        Assertions.assertEquals( 20.0, list1.get(0).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
+        Assertions.assertEquals( 20.0, list1.getFirst().getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 60.0, list1.get(1).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 70.0, list1.get(2).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 80.0, list1.get(3).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
@@ -184,7 +184,7 @@ public class BurstSelectorStepTest {
         final AbsoluteDate t1 = t0.shiftedBy(118);
         final List<AbsoluteDate> list1 = selector.selectDates(t1, t0);
         Assertions.assertEquals(6, list1.size());
-        Assertions.assertEquals(130.0, list1.get(0).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
+        Assertions.assertEquals(130.0, list1.getFirst().getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals(120.0, list1.get(1).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 80.0, list1.get(2).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 70.0, list1.get(3).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
